--- a/hw1/catalog/catalog.html
+++ b/hw1/catalog/catalog.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">Главная</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores beatae distinctio debitis exercitationem pariatur id cum facere, eum, blanditiis voluptatem eveniet aspernatur minima saepe praesentium ratione qui fuga fugiat tenetur recusandae alias. Libero aliquid molestiae expedita porro, non dolor, eum beatae pariatur perspiciatis, ratione repellendus incidunt harum doloremque accusamus? Natus aliquam animi id explicabo laudantium placeat similique autem! Explicabo dolorum culpa qui molestias quae cum molestiae odit rerum officia commodi beatae eligendi labore mollitia, natus laboriosam, sapiente, id est blanditiis. Voluptates aliquam placeat et expedita voluptatibus delectus reiciendis laborum eligendi vitae beatae. Ab, iure. Aspernatur quibusdam asperiores voluptatibus maxime. Commodi obcaecati ex consequuntur. Veritatis, impedit distinctio, doloribus nihil error dignissimos autem recusandae aspernatur magni consequuntur vel laborum dolorem accusamus optio fugiat est? Modi iste tempora consequuntur neque, voluptatum dolore dolor accusamus aspernatur! Explicabo fuga nisi adipisci! Deleniti, voluptatum expedita, enim, explicabo ullam voluptatem nemo quod eligendi error deserunt similique praesentium?</p>
-    <h2>Мастихин</h2>
+    <a class="menu__link" href="../index.html">Главная</a>
+    <h1 class="header1">Каталог</h1>
+    <p class="paragr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores beatae distinctio debitis exercitationem pariatur id cum facere, eum, blanditiis voluptatem eveniet aspernatur minima saepe praesentium ratione qui fuga fugiat tenetur recusandae alias. Libero aliquid molestiae expedita porro, non dolor, eum beatae pariatur perspiciatis, ratione repellendus incidunt harum doloremque accusamus? Natus aliquam animi id explicabo laudantium placeat similique autem! Explicabo dolorum culpa qui molestias quae cum molestiae odit rerum officia commodi beatae eligendi labore mollitia, natus laboriosam, sapiente, id est blanditiis. Voluptates aliquam placeat et expedita voluptatibus delectus reiciendis laborum eligendi vitae beatae. Ab, iure. Aspernatur quibusdam asperiores voluptatibus maxime. Commodi obcaecati ex consequuntur. Veritatis, impedit distinctio, doloribus nihil error dignissimos autem recusandae aspernatur magni consequuntur vel laborum dolorem accusamus optio fugiat est? Modi iste tempora consequuntur neque, voluptatum dolore dolor accusamus aspernatur! Explicabo fuga nisi adipisci! Deleniti, voluptatum expedita, enim, explicabo ullam voluptatem nemo quod eligendi error deserunt similique praesentium?</p>
+    <h2 class="header2">Мастихин</h2>
     <img src="../img/мастихин.jpg" width="100" height="111" alt="Тут изображение мастихина">
-    <p>Тут описание мастихина</p><br><br>
-    <h2>Петли</h2>
+    <p class="paragr">Тут описание мастихина</p><br><br>
+    <h2 class="header2">Петли</h2>
     <img src="../img/петли.jpg" width="100" height="111" alt="Тут изображение петель">
-    <p>Тут описание петель</p><br><br>
-    <h2>Стек скульптурный</h2>
+    <p class="paragr">Тут описание петель</p><br><br>
+    <h2 class="header2">Стек скульптурный</h2>
     <img src="../img/стек.jpg" width="100" height="111" alt="Тут изображение стека">
-    <p>Тут описание стека</p>
+    <p class="paragr">Тут описание стека</p>
 </body>
 </html>
