--- a/hw1/index.html
+++ b/hw1/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home work №1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="catalog/catalog.html">Каталог</a>
+    <a class="menu__link" href="catalog/catalog.html">Каталог</a>
     <a href=""></a>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint deleniti deserunt officia, at ipsam consequatur perspiciatis error architecto labore beatae? Deleniti omnis totam dignissimos assumenda?</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, officiis?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta distinctio impedit ea consectetur, fugiat voluptatem ullam!</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo deserunt voluptatibus itaque tenetur temporibus doloribus, sint quod sapiente quam.</p>
+    <h1 class="header1">Главная страница</h1>
+    <p class="paragr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint deleniti deserunt officia, at ipsam consequatur perspiciatis error architecto labore beatae? Deleniti omnis totam dignissimos assumenda?</p>
+    <h2 class="header2">Добро пожаловать на сайт</h2>
+    <p class="paragr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, officiis?</p>
+    <p class="paragr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta distinctio impedit ea consectetur, fugiat voluptatem ullam!</p>
+    <p class="paragr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo deserunt voluptatibus itaque tenetur temporibus doloribus, sint quod sapiente quam.</p>
 
 </body>
 </html>
