--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Моя первая страница</h1>
-    <a href="index.html">Главная</a>
+    <h1 class="title">Моя первая страница</h1>
+    <a href="index.html" class="menu">Главная</a>
     <!-- <a href="#">Главная</a> -->
-    <a href="info/about.html">Обо мне</a>
-    <a href="newindex.html">Форма</a>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, quas accusamus! Sint, sequi? Consequatur aliquid voluptatibus facilis blanditiis odio consequuntur laboriosam eveniet quos officia deserunt? Nam similique nulla quaerat aliquam.</p>
-    <h2>Заголовок второго уровня</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, assumenda.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolor.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <a href="info/about.html" class="menu">Обо мне</a>
+    <a href="newindex.html" class="menu">Форма</a>
+    <p class="paragr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, quas accusamus! Sint, sequi? Consequatur aliquid voluptatibus facilis blanditiis odio consequuntur laboriosam eveniet quos officia deserunt? Nam similique nulla quaerat aliquam.</p>
+    <h2 class="header2">Заголовок второго уровня</h2>
+    <p class="paragr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, assumenda.</p>
+    <p class="paragr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolor.</p>
+    <p class="paragr">Lorem ipsum dolor sit amet.</p>
     <a href="http://vk.com"><img src="img/vk.svg" width="30" height="50" alt="vk"></a>
     <a href="http://facebook.com"><img src="img/facebook.svg" width="30" height="50" alt="facebook"></a>
 </body>
