--- a/lesson 1/newindex.html
+++ b/lesson 1/newindex.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Формы</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a>
-    <a href="info/about.html">Обо мне</a>
-    <a href="newindex.html">Форма</a>
-    <h1>Оставить заявку</h1>
+    <a href="index.html" class="menu">Главная</a>
+    <a href="info/about.html" class="menu">Обо мне</a>
+    <a href="newindex.html" class="menu">Форма</a>
+    <h1 class="title">Оставить заявку</h1>
     <form action="#">
-        Имя <input type="text" placeholder="Введите имя"><br>
-        Почта <input type="email" placeholder="Введите почту"><br>
-        <button type="submit">Отправить</button>
-        <button type="reset">Удалить</button>
+        Имя <input class="pole" type="text" placeholder="Введите имя"><br>
+        Почта <input class="pole" type="email" placeholder="Введите почту"><br>
+        <button class="butthead" type="submit">Отправить</button>
+        <button class="butthead" type="reset">Удалить</button>
     </form>
 </body>
 </html>
