--- a/hw6/index.html
+++ b/hw6/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeWork</title>
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="top">
         <div class="top_header">
-            <img src="img/logo_up.svg" alt="up">
-            <img src="img/text_up.svg" alt="text">
+            <div class="logo_menu">
+                <img src="img/logo_up.svg" alt="up">
+                <img class='logo_menu_pic' src="img/text_up.svg" alt="text">
+            </div>            
             <div class="top_h_menu">
-                <a class="h_menu" href="#">Home</a>
+                <a class="h_menu_h" href="#">Home</a>
                 <a class="h_menu" href="#">About Us</a>
                 <a class="h_menu" href="#">Services</a>
                 <a class="h_menu" href="#">Features</a>
@@ -22,15 +25,15 @@
                 <a class="h_menu" href="#">Contact</a>
             </div>
         </div>
-        <div class="top_info">
+        <div class="top_info center">
             <div class="top_info_pic"><img src="img/top_info_image.svg" alt=""></div>
             <div class="top_info_text">
                 <h1 class="big_text">SEO & Digital
                     Marketing For Your
                     Website.</h1>
                 <p class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
-                <div class="top_info_button">
-                    <button class="button">Start New</button>
+                <div class="top_info_button center">
+                    <button class="button b1">Start New</button>
                     <button class="button">Watch Video</button>
                 </div>
             </div>
