--- a/hw6/index.html
+++ b/hw6/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeWork</title>
-    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="top">
-        <div class="top_header">
+        <div class="top_header center">
             <div class="logo_menu">
                 <img src="img/logo_up.svg" alt="up">
                 <img class='logo_menu_pic' src="img/text_up.svg" alt="text">
