--- a/hw6/index.html
+++ b/hw6/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeWork</title>
-    <link href="https://fonts.googleapis.com/css2?family=Questrial&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Questrial&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,13 +39,61 @@
             </div>
         </div>
     </div>
-    <div class="footer">
+    <div class="footer center">
         <img src="img/1.svg" alt="1">
         <img src="img/2.svg" alt="2">
         <img src="img/3.svg" alt="3">
         <img src="img/4.svg" alt="4">
         <img src="img/5.svg" alt="5">
         <img src="img/6.svg" alt="6">
+    </div>
+    <div class="plitka_h center">
+        <div class="item">
+            <img src="img/icon_h1.svg" alt="">
+            <h3 class="item_h3">Grow Your Business</h3>
+            <p class="item_p">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="plitka_linc" href="#">Read more...</a>
+        </div>
+        <div class="item item3">
+            <img src="img/icon_h2.svg" alt="">
+            <h3 class="item_h3">Get Quality Ieads</h3>
+            <p class="item_p">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="plitka_linc" href="#">Read more...</a>
+        </div>
+        <div class="item">
+            <img src="img/icon_h3.svg" alt="">
+            <h3 class="item_h3">Drive More Sales</h3>
+            <p class="item_p">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="plitka_linc" href="#">Read more...</a>
+        </div>
+    </div>
+    <div class="plitka_content center">
+        <h1 class="p_c_h1 center">Why You Should Choose Us.</h1>
+        <p class="p_c_p center">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+            applications through revolutionary catalysts.</p>
+        <div class="Plitka_c_trio center">
+            <div class="plitka_item">
+                <img src="img/pl_item1.svg" width= 385px;
+                height= 295px; alt="">
+                <h1 class="pl_h1" >Keyword Research</h1>
+                <p class="plitka_p">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="button_pl">Learn More <img src="img/icon_b.svg" alt=""></button>
+            </div>
+                
+            <div class="plitka_item item3">
+                <img src="img/pl_item2.svg"  alt="">
+                <h1 class="pl_h1" >Keyword Research</h1>
+                <p class="plitka_p">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="button_pl">Learn More <img src="img/icon_b.svg" alt=""></button>
+            </div>
+                
+            <div class="plitka_item">
+                <img src="img/pl_item3.svg" alt="">
+                <h1 class="pl_h1" >Keyword Research</h1>
+                <p class="plitka_p">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="button_pl">Learn More <img src="img/icon_b.svg" alt=""></button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
