--- a/hw11/index.html
+++ b/hw11/index.html
@@ -9,7 +9,7 @@
     <title>hw11</title>
 </head>
 <body>
-    <div class="header_menu">
+    <div class="header_menu center">
         <div class="menu">
             <div class="search">
                 <img src="img/logo_menu.svg" alt="">
@@ -18,12 +18,12 @@
             <div class="navigation">
                 <!-- <a class='navig' href="#"><img src="img/button_menu.svg" alt=""></a> -->
                 <a href="#"><img src="img/menu1.svg" alt=""></a>
-                <a href="#"><img src="img/menu2.svg" alt=""></a>
-                <a href="#"><img src="img/menu3.svg" alt=""></a>
+                <a href="#"><img class="img_navig" src="img/menu2.svg" alt=""></a>
+                <a href="#"><img class="img_navig" src="img/menu3.svg" alt=""></a>
             </div>
         </div>
     </div>
-    <div class="body ">
+    <div class="body center">
         <div class="main_img">
             <img src="img/main_img.svg" alt="main">
         </div>
@@ -33,7 +33,7 @@
                 <div class="div_text">
                     <h1 class="brand">THE BRAND</h1>
                     <div class="color_text">
-                        <h3>OF LUXERIOUS <h3 class="fashion">FASHION</h3></h3>
+                        <h3 class="lux">OF LUXERIOUS <h3 class="fashion">FASHION</h3></h3>
                     </div>               
                  </div>
             </div>
@@ -52,7 +52,8 @@
             </div>
         </div>        
         <div class="accesories">
-            <a href="#"><img src="img/4-ACCESORIES.svg" alt=""></a>
+            <!-- <img class="img_acc" src="img/new.png" alt="#"> -->
+            <a class="img_acc2" href="#"><img  src="img/4-ACCESORIES.svg" alt=""></a>
         </div>
     <!-- </div> -->
     <div class="featured">
